codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_sub_agent_activity_renders_once.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
• Interacted with `/root/researcher`
