codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apply_patch_manual_flow_history.snap
---
source: tui/src/chatwidget/tests.rs
expression: snapshot_text
---
Proposed

• Proposed Change foo.txt (+1 -0)
    1     +hello


Approved

• Change Approved 1 file (+1 -0)
