codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apply_patch_streaming_live_multi_file.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: second_blob
---
                  +1
• Editing 2 files +1 -0
                     -1
  └ bar.rs
  └ foo.txt
