codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apply_patch_streaming_live_rename.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: single_blob
---
• Editing old.rs → new.rs +1 -1
