codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apply_patch_streaming_live_rename_multi_file.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: multi_blob
---
                  +1
• Editing 2 files +1 -1
  └ added.txt
  └ old.rs → new.rs
