codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apply_patch_streaming_live_single_file.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: lines_to_single_string(&first_live)
---
• Creating foo.txt +1
