codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec_multiline_prefix_truncates.snap
---
source: tui/src/chatwidget/tests.rs
expression: contents
---
  Would you like to run the following command?

  $ echo hello world

› 1. Yes, proceed (y)
  2. Yes, and don't ask again for commands that start with `python - <<'PY'
     xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx... (truncated)` (p)
  3. No, and tell Codex what to do differently (esc)

  Press enter to confirm or esc to cancel
